* Improving speed of boostPriority * Changing findChunksToWaitFor to use hz index